# autonmap-api

./: .env.example  .gitignore  Makefile  README.md  autonmap-api.md  autonmap.py  docker-compose.yml  pyproject.toml  requirements.txt  scan_cli.py  setup.sh
api/: __init__.py  config.py  main.py  schemas.py
api/db/: models.py  session.py
api/routers/: admin.py  profiles.py  scans.py
api/security/: auth.py  ip_allowlist.py
api/services/: nmap_runner.py  tasks.py  webhooks.py
deploy/backend/: Dockerfile
deploy/frontend/: Dockerfile
deploy/nginx/conf.d/: default.conf
deploy/scripts/: migrate.sh  wait-for.sh
frontend/: Dockerfile  app.py  models.py  requirements.txt  utils.py
frontend/commands/: user_cli.py
frontend/static/: style.css
frontend/templates/: _base.html  _token_modal.html  change_password.html  create_user.html  docs.html  edit_user.html  index.html  login.html  profile.html  setup_2fa.html  users.html  verify_2fa.html
infra/: Dockerfile  docker-compose.yml
scripts/: create_admin_token.py  hash_password.py
