[project]
name = "autonmap-api-backend"
version = "0.1.0"
description = "Autonmap API backend package"
requires-python = ">=3.11"
dependencies = []

# Include the `api` package when this project is installed. Without this,
# `pip install .` would not install the backend code into site-packages.
[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
